--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
 nltk==3.7
 streamlit==1.25.0
-numpy==1.20.1
-seaborn==0.11.1
-matplotlib==3.4.1
-plotly==4.14.3
-pandas==1.2.3
-joblib==0.16.0
+pillow==8.3.1
 scikit-learn
